# costwave

./: .env.example  .env.production.template  .gitignore  CHANGELOG.md  CLAUDE.md  Caddyfile  DESIGN.md  PLAN.md  PROMPT.md  README.deployment.md  README.md  backlog.md  docker-compose.prod.yml  docker-compose.yml
.claude/agents/: architect.md  devops.md  fullstack-dev.md  i18n-translator.md  security-auditor.md
app/: Dockerfile  auth-schema.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts
app/drizzle/: 0000_cuddly_leo.sql  0001_common_joystick.sql
app/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
app/scripts/: generate-icons.mjs  migrate.ts  setup-stripe.ts
app/src/: instrumentation.ts  middleware.ts  proxy.ts
app/src/app/: globals.css  layout.tsx  manifest.ts  sw.ts
docs/: api-reference.md  architecture.md  budgets-and-alerts.md  claude-code-hook.md  contributing.md  getting-started.md  n8n-integration.md  sdk-python.md  self-hosting.md
hooks/: README.md  costwave-claude.sh
mockups/: dashboard-b-mission.jsx  mc-tokens.jsx  screen-1-provider.jsx  screen-2-radar v1.jsx  screen-3-budgets.jsx  screen-4-settings.jsx  screen-5-landing.jsx  screen-6-workflows-list.jsx  screen-7-workflow-detail.jsx
scripts/: deploy.sh
scripts/db/: inspect-db.sql  migrate-schema.sql
sdk/agent_observability/: README.md  pyproject.toml
sdk/agent_observability/costwave/: __init__.py  batch.py  client.py
sdk/agent_observability/tests/: test_client.py
sdk/n8n-nodes-costwave/: README.md  package.json  tsconfig.json
(+114 files in other folders)
