[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "costwave"
version = "0.1.0"
description = "Costwave Python SDK for AI cost tracking"
readme = "README.md"
authors = [{ name = "Matthieu", email = "contact@0xmatthieu.dev" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["costwave*"]
